Bug 467908 - All day event boxes in rotated view overlapps time grid and shown side by side. r=philipp
--HG--
extra : rebase_source : 42850287c03b97508ce9fb1f7af53db7f6fbbe14

--- a/calendar/base/themes/pinstripe/calendar-views.css
+++ b/calendar/base/themes/pinstripe/calendar-views.css
@@ -105,7 +105,7 @@ calendar-header-container[weekend="true"][relation="today"],
     background-color: #D4DEE8;
 }
 
-calendar-header-container[orient="horizontal"] {
+.calendar-header-day-box[orient="vertical"] .calendar-event-column-header {
     border-bottom: 1px solid #D2D2D2;
     min-width: 100px;
 }
